Adding the presentation files

--- a/Final_exam_files/olive_kernel_glycerol_cyclopentanone_omada_27_final.org
+++ b/Final_exam_files/olive_kernel_glycerol_cyclopentanone_omada_27_final.org
@@ -528,10 +528,10 @@ C_{5}H_{4}O_{2} + 3H_{2} → H_{2}O + C_{5}H_{8}O
 να είναι \( 98 \% \).
 
 Οι συνθήκες λειτουργίας του αντιδραστήρα καθορίστηκαν σε σταθερή
-θερμοκρασία 160^{ο}C και πίεση 4 MPa. Για τη μοντελοποίηση του
+θερμοκρασία 160 \( ^oC \) και πίεση 4 MPa. Για τη μοντελοποίηση του
 αντιδραστήρα, ορίστηκε η κινητική της αντίδρασης με το μηχανισμό
 Powerlaw, που από την βιβλιογραφία [cite:@yuHighlySelectiveHydrogenative2022] η σταθερά της
-αντίδρασης για 160^{ο}C είναι ίση με 0,0128 hr^{-1} με ενέργεια
+αντίδρασης για 160 \( ^oC \) είναι ίση με 0,0128 hr^{-1} με ενέργεια
 ενεργοποίησης 64,2 kJ/mol. Ο χρόνος που χρειάζεται η αντίδραση για να
 πραγματοποιηθεί σε αυτές τις συνθήκες είναι 1 ώρα. Το θερμοδυναμικό
 μοντέλο που επιλέχθηκε είναι το PRWS, λόγω της υψηλής θερμοκρασίας.
@@ -589,7 +589,7 @@ DSTWU. Αυτή η αποστακτική στήλη είναι απλή και 
 επεξεργασία.
 
 Πριν να φτάσει το ρεύμα στην αποστακτική στήλη ψύχεται σε εναλλάκτη
-θερμότητας σε θερμοκρασία 160 ^{ο}C και πίεση 20 bar. Το θερμοδυναμικό
+θερμότητας σε θερμοκρασία 160 \( ^oC \) και πίεση 20 bar. Το θερμοδυναμικό
 μοντέλο για τον εναλλάκτη είναι το ίδιο (PRWS). Στο Aspen ως
 εναλλάκτης θερμότητας εφαρμόστηκε Heater. Μετά τη ψύξη του, το ρεύμα
 εισέρχεται σε μια αποστακτική στήλη με σκοπό τον διαχωρισμό της
