Adding various energy integration files

--- a/c_glycerinogenes_rate_expressions.org
+++ b/c_glycerinogenes_rate_expressions.org
@@ -15,4 +15,16 @@
 Με βάση τα δεδομένα αυτά, μπορούμε να κάνουμε μία εκτίμηση του όγκου του αντιδραστήρα που απαιτείται και της ετήσιας παραγωγής γλυκερόλης. Εφόσον είναι γνωστός ο χρόνος παραμονής και η συγκέντρωση γλυκόζης που εισέρχεται στον αντιδραστήρα μπορεί να υπολογιστεί η κατανάλωση της γλυκόζης ανηγμένη ως προς τον όγκο του αντιδραστήρα [\( \frac{g}{l \cdot year} \)]. Εφόσον είναι γνωστό και το ρεύμα τροφοδοσίας μπορεί να υπολογιστεί πόση μάζα γλυκόζης πρέπει να διαχειριστούμε τον χρόνο. Ο λόγος αυτών των δύο, μας δίνει το απαραίτητο working volume ώστε να επεξεργαστούμε όλη την βιομάζα που έχει η τροφοδοσία χρησιμοποιώντας σε κάθε batch την βέλτιστη συγκέντρωση υποστρώματος. Αυτός προκύπτει ίσος με 1301.5 m^3. Ο συνολικός αντιδρών όγκος άρα πρέπει να είναι στο ελάχιστο 1301.5 m^3. Σε ξεχωριστό αρχείο παρουσιάζονται και τα οικονομικά στοιχεία της διεργασίας
 
 Για την προσωμοίωση του μοντέλου στο Aspen, μπορεί να χρησιμοποιηθεί η LHHW με τέτοιον τρόπο ώστε να προσωμοιάσει το Monod. Πρέπει οι συγκεντρώσεις να είναι υπολογισμένες ως προς Mass concentration (kg/m^3 σε SI, αλλά το g/l είναι ισοδύναμο), αλλά πρέπει το μ_max να έχει και αυτό μονάδες SI. Το μ_max σε μονάδες SI είναι 3.06e-6. Άρα, το μοντέλο Monod με τον ρυθμό εκφρασμένο σε μονάδες SI και τις συγκεντρώσεις υπολογισμένες ως προς το mass concentration είναι \[ \frac{dx}{dt} = \frac{3.06*10^{-6}[S]}{236.19+[S]}[x] \]
+| Time | Biomass (g/l) | Glycerol (g/l) | Glucose (g/l) |
+|------+---------------+----------------+---------------|
+|    0 |       0.93824 |                |      230.4413 |
+|    5 |       2.18008 |                |     228.57485 |
+|   10 |       5.79464 |        15.1774 |     211.91205 |
+|   15 |       8.36496 |       19.64065 |      202.3093 |
+|   20 |       10.6936 |       27.70155 |      177.7479 |
+|   25 |       10.7544 |        38.1158 |     168.84845 |
+|   40 |          10.8 |       53.99415 |      110.6098 |
+|   45 |       10.8304 |       65.19285 |       86.3189 |
+|   75 |       10.8456 |       90.18705 |      22.50795 |
+|   80 |       10.6784 |        96.1651 |      13.25685 |
 
