--- a/lignin_cellulose_conventionals.org
+++ b/lignin_cellulose_conventionals.org
@@ -5,7 +5,7 @@
 Σύμφωνα με αυτούς, η κυτταρίνη αντιστοιχεί σε ένα πολυμερές με δομική μονάδα το μόριο \( C_6H_{10}O_5 \) για αυτό θα χρησιμοποιηθεί η ένωση αυτή. Για την λιγνίνη υποτέθηκε ο τύπος \( C_{7.3}H_{13.9}O_{1.3} \). Οι αντίστοιχες αντιδράσεις καύσης είναι οι
 \[ \begin{align*} C_6H_{10}O_5 + 6O_2 \rightarrow 5H_2O + 6CO_2 \\ C_{7.3}H_{13.9}O_{1.3} + 10.125O_2 \rightarrow 6.95 H_2O + 7.3CO_2   \end{align*} \]
 
-Για την κυτταρίνη, το μοριακό βάρος υπολογίζεται άμεσα για τη δομική μονάδα (162.144). Η θερμότητα σύνθεσης βρέθηκε βιβλιογραφικά [[cite:&domalskiThermodynamicDataBiomass1987]] ως 17.456 MJ/kg το οποίο αντιστοιχεί σε 2.83e+6 kJ/kmol ενώ η ενέργεια Gibbs βρέθηκε από την αντίστοιχη ενέργεια Gibbs της καύσης ως 4.783 kJ/kmol. Για την θερμοχωρηστικότητα, βρέθηκε από τους [[cite:&wooleyDevelopmentASPENPhysical1996]] ότι για Τ = 298.15 Κ, CP_s = 0.117e+5 και για Τ = 1000 K, CP_s = 0.672e+3. Η πυκνότητα θεωρήθηκε 1.5 g/cc (ίδια με του αμύλου). Άρα, 0.667 cc/g αν θέλουμε ειδικό όγκο ή 108.15 cc/mol αν θέλουμε γραμμομοριακό όγκο.
+Για την κυτταρίνη, το μοριακό βάρος υπολογίζεται άμεσα για τη δομική μονάδα (162.144). Η θερμότητα σύνθεσης βρέθηκε βιβλιογραφικά [[cite:&domalskiThermodynamicDataBiomass1987]] ως 17.456 MJ/kg το οποίο αντιστοιχεί σε 2.83e+6 kJ/kmol ενώ η ενέργεια Gibbs βρέθηκε από την αντίστοιχη ενέργεια Gibbs της καύσης ως 4.783 kJ/kmol. Για την θερμοχωρηστικότητα, βρέθηκε από την βάση δεδομένων του NREL [cite:@domalskiThermodynamicDataBiomass1987] ότι ισχύει η συσχέτιση \( C_p = -0.07213 + 4.14 \cdot 10^{-3} T \) (J/g K) ή \( -11.695 + 0.671T \) (J/mol K). Η πυκνότητα θεωρήθηκε 1.5 g/cc (ίδια με του αμύλου). Άρα, 0.667 cc/g αν θέλουμε ειδικό όγκο ή 108.15 cc/mol αν θέλουμε γραμμομοριακό όγκο.
 
 Για την λιγνίνη, το μοριακό βάρος υπολογίζεται και εδώ άμεσα (122.493). Η θερμότητα σύνθεσης βρέθηκε συγκεκριμένα για πυρηνόξυλο ως 23.5 MJ/kg (2.879e+6 kJ/kmol) από τους [cite:&fernandez-bolanosCharacterizationLigninObtained1999], η γραμμομοριακή ενέργεια Gibbs 6.1762 kJ/kmol μέσω την ενέργειας Gibbs της καύσης ενώ η θερμοχωρητικότητα από την βάση δεδομένων του NREL ως \( 0.25660 + 3.22 \cdot 10^{-3} T \) (J/g K) ή \( 31.43 + 0.3944 T \) (J/mol K). H πυκνότητα υποτέθηκε και εδώ ίση με του αμύλου αλλά καθώς το Aspen θέλει γραμμομοριακό όγκο, αυτός υπολογίστηκε ως 81.7 cc/mol.
 
