--- a/energy_integration.org
+++ b/energy_integration.org
@@ -45,12 +45,12 @@
 #+TBLFM: $5=$3 - $4::$6=$5*$2
 
 * Αποτελέσματα - Γραφήματα
-Με βάση αυτά μπορεί να φτιαχθεί ο ενεργειακός καταρράκτης της διεργασίας και από αυτόν το μεγάλο σύνθετο γράφημα. Ο ενεργειακός καταρράκτης φαίνεται παρακάτω
+Με βάση αυτά μπορεί να φτιαχθεί ο ενεργειακός καταρράκτης της διεργασίας και από αυτόν το μεγάλο σύνθετο γράφημα. Ο ενεργειακός καταρράκτης φαίνεται παρακάτω ([[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Diagrams/energy_cascade.pdf][github link]])
 #+CAPTION: Ενεργειακός καταρράκτης της διεργασίας
 #+ATTR_ORG: :width 500px
 [[/home/vidianos/Documents/7o_εξάμηνο/Σχεδιασμός_Ι/Project/git_repo/Diagrams/energy_cascade.svg]]
 
-Έπειτα, χρησιμοποιείται ο παρακάτω κώδικας octave για να δημιουργήσει το μεγάλο σύνθετο γράφημα της διεργασίας.
+Έπειτα, χρησιμοποιείται ο παρακάτω κώδικας octave για να δημιουργήσει το μεγάλο σύνθετο γράφημα της διεργασίας [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Diagrams/grand_composite_curve.png][github link]].
 
 #+BEGIN_SRC octave :results file
 
@@ -81,10 +81,12 @@
 
 ** Σχόλια για την ολοκλήρωση διάφορων κομματιών
 *** Αντιδραστήρας παραγωγής γλυκερόλης
-Ο αντιδραστήρας λειτουργεί στους 30 βαθμούς κελσίου και είναι εξώθερμος. Στο μεγάλο σύνθετο γράφημα θα έμπαινε στους 25 \( ^oC \) το οποίο είναι κάτω από τον κόμβο ανάσχεσης κατά 10. Λόγω της πολύ στενής θερμοκρασιακής περιοχής στην οποία μπορεί να διεξαχθεί η αντίδραση, θεωρούμε πως δεν αξίζει να μελετηθεί ένα σενάριο ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία.
+Ο αντιδραστήρας λειτουργεί στους 30 βαθμούς κελσίου και είναι εξώθερμος. Στο μεγάλο σύνθετο γράφημα θα έμπαινε στους 25 \( ^oC \) το οποίο είναι κάτω από τον κόμβο ανάσχεσης κατά 10. Λόγω της πολύ στενής θερμοκρασιακής περιοχής στην οποία μπορεί να διεξαχθεί η αντίδραση, θεωρούμε πως δεν αξίζει να μελετηθεί ένα σενάριο ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία (όπου θα έπρεπε η θερμοκρασία λειτουργίας να αυξηθεί κατά 10 τουλάχιστον βαθμούς).
 *** Αποστακτική στήλη γλυκερόλης
 Ο συμπηκνωτήρας της στήλης είναι στους 144.37 \( ^oC \) ενώ ο αναβραστήρας στους 288.93 \( ^oC \). Υπάρχει σίγουρα η δυνατότητα να καλυφθεί θερμικά ένα ικανοποιητικό κομμάτι της διεργασίας αυτής από υπάρχοντα ρεύματα, όμως, η θερμοκρασία του αναβραστήρα είναι σιγουρα μεγαλύτερη από κάθε άλλη θερμοκρασία στην διεργασία άρα εκείνο το κομμάτι θα χρειαστεί μία ξεχωριστή βοηθητική παροχή σε στάθμη υψηλότερη αυτής που χρειάζεται η υπόλοιπη διεργασία.
 *** Αντιδραστήρας παραγωγής φουρφουράλης
-Θερμοκρασία λειτουργίας οι 242 \( ^oC \), ή 237 \( ^oC \) στο μεγάλο σύνθετο γράφημα. Ο αντιδραστήρας είναι εξώθερμος, άρα υπάρχει σίγουρα δυνατότητα ψύξης του με κάποιο υπάρχον ρεύμα.
+Θερμοκρασία λειτουργίας οι 242 \( ^oC \), ή 237 \( ^oC \) στο μεγάλο σύνθετο γράφημα. Ο αντιδραστήρας είναι εξώθερμος, άρα μπορεί να γίνει σωστή ολοκλήρωση. Καθώς είναι αρκετά ψηλά στο γράφημα, υπάρχουν σίγουρα ρεύματα πιο ψυχρά από αυτό για να το ψύξουν.
 *** Αποστακτική στήλη κυκλοπεντανόνης
-Οι θερμικές απαιτήσεις της στήλης υπερβαίνουν κατά πολύ την διαθέσιμη θερμότητα της διεργασίας άρα στην παρούσα φάση δεν μπορεί να ολοκληρωθεί.
+Οι θερμικές απαιτήσεις της στήλης υπερβαίνουν κατά πολύ την διαθέσιμη θερμότητα της διεργασίας άρα στην παρούσα φάση δεν μπορεί να ολοκληρωθεί. Βέβαια ο διαχωρισμός αυτός έχει κατασταθεί πολύ δύσκολος λόγω της πολύ υψηλής πίεσης λειτουργίας. Αν ρίξουμε την πίεση αυτή και η απόσταξη γίνει σε ατμοσφαιρική πχ πίεση, είναι πιθανό να μπορεί να ολοκληρωθεί η στήλη καθώς οι θερμοκρασιακές περιοχές που κινείτε είναι κατάλληλες και θα είναι ακόμη καλύτερες αν μειωθεί η πίεση λειτουργίας.
+*** Αντιδραστήρας σακχαροποίησης
+Ο αντιδραστήρας λειτουργεί στους 50 \( ^oC \) και είναι εξώθερμος (45 \( ^oC \) στο ΜΣΓ). Εφόσον είναι πάνω από τον κόμβο ανάσχεσης, μπορεί θεωρητικά να ολοκληρωθεί με την διεργασία. Όμως, με το παρόν ΜΣΓ, έχουμε διαθέσιμα 573.7 MJ/h θερμότητα διαθέσιμη στην θερμοκρασία αυτή ενώ με βάση τα αποτελέσματα του Aspen, το heat duty της διεργασίας είναι -2477 MJ/hr. Για να έχουμε το επιθυμητό θερμικό περιεχόμενο, θα έπρεπε η θερμοκρασία να αυξηθεί μέχρι τους 100-105 \( ^oC \) περίπου. Στις συνθήκες αυτές δεν μπορεί να επιζήσει καμία κυτταρινάση. Θεωρητικά, μπορεί να γίνει όξινη υδρόλυση της κυτταρίνης με καταλύτη θειικό οξύ με συνθήκες λειτουργίας 120 \( ^oC \) περίπου, η οποία θα μπορούσε να ολοκληρωθεί, όμως είναι γνωστό πως η όξινη προκατεργασία της βιομάζας ευνοεί την διάσπαση κυτταρίνης σε παραπροιόντα όπως η υδρόξυ-μέθυλο-φουρφουράλη (HMF) και τα προιόντα διάσπασης αυτής πέρα από την γλυκόζη, οι οποίες είναι ενώσεις που είναι γνωστές για την τοξικότητα τους προς μικροοργανισμούς. Ως αποτέλεσμα, θα έπρεπε να γίνει κάποιος επιπλέον διαχωρισμός για να ανακτηθεί καθαρή γλυκόζη στην περίπτωση αυτή. Άρα θεωρείται ανούσια η προσπάθεια ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία.
