--- a/energy_integration.org
+++ b/energy_integration.org
@@ -45,7 +45,7 @@
 #+TBLFM: $5=$3 - $4::$6=$5*$2
 
 * Αποτελέσματα - Γραφήματα
-Με βάση αυτά μπορεί να φτιαχθεί ο ενεργειακός καταρράκτης της διεργασίας και από αυτόν το μεγάλο σύνθετο γράφημα. Ο ενεργειακός καταρράκτης φαίνεται παρακάτω ([[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Diagrams/energy_cascade.pdf][Δείτε εδώ από github]]).
+Με βάση αυτά μπορεί να φτιαχθεί ο ενεργειακός καταρράκτης της διεργασίας και από αυτόν το μεγάλο σύνθετο γράφημα. Ο ενεργειακός καταρράκτης φαίνεται παρακάτω.
 #+CAPTION: Ενεργειακός καταρράκτης της διεργασίας
 #+ATTR_ORG: :width 500px
 [[./Diagrams/energy_cascade.svg]]
