Adding more info to the README file

--- a/README.org
+++ b/README.org
@@ -1,11 +1,17 @@
 #+TITLE: Process Design Project
 
-This repository hosts various files for my Process Design Project for University for it was recommended we version control the project. Most of the files are in Greek due to it being the language the lesson is taught in.
+This repository hosts various files for my Process Design Project for University for it was recommended we version control the project. Most of the files are in Greek due to it being the language the lesson is taught in. The subject is "Utilization of Olive Kernels for the production of Glycerol and Cyclopentanone". Glycerol is produced microbially from cellulose (using Candida glycerinogenes as the microorganism), Cyclopentanone is produced from hydrogenation of furfural a product of acid treatment of xylose (coming from the hemicellulosic part of the biomass) while lignin is used in a rankine cycle for the production of heat and electricity.
 
-In the top level folder of the repository are the various .org files (markup format similar to .md) I have which are notes of mine for the project. Since most of my notes reside in my ~/org_roam directory however, it would be bothersome to move them here. With the help of my project [[https://github.com/Vidianos-Giannitsis/zetteldesk.el][zetteldesk.el]] I have created a file (process_design_project_notes.org) which stores all my org_roam notes related to the project. This file is also available in pdf version to leverage all the latex features it uses which Github does not display correctly. Besides those notes, all the other org files in this directory have also been inserted to it as it made sense for me to do so.
+In the top level folder of the repository are the various .org files (markup format similar to .md) I have which are notes of mine for the project. The initial notes about the subject which are mostly conceptional on how to produce these reside in my ~/org_roam directory (where most of my digital notes are). Therefore, it would be bothersome to move them here. With the help of my project [[https://github.com/Vidianos-Giannitsis/zetteldesk.el][zetteldesk.el]] I have created a file (process_design_project_notes.org) which stores all my org_roam notes related to the project. This file is also available in pdf version to leverage all the latex features it uses which Github does not display correctly.
+
+There are however a lot of other files in this top level describing core parts of the process such as mass balances, economic feasibility, energy integration, some modeling info needed in Aspen and some calculation for the bioreactor.
 
 In the /Diagrams folder are various .svg files created with Inkscape which are relevant to the project. Some of them are also exported to .pdf or .png
 
-In the /Calculations folder are various Excel and Matlab files used for calculations needed for the project.
+In the /Calculations folder are various Excel and Matlab files used for calculations needed for the project. Experimentally, some Julia files have also been added as I am trying to learn the language currently.
 
-In the /Aspen folder are aspen files we have used for simulations of the process. Following the .apwz files (aspen files) are in some cases .org documents documenting the process.
+In the /Aspen folder are AspenPLUS files we have used for simulations of the process. Following the .apwz files (aspen files) are in some cases .org documents documenting the process.
+
+Then, there are folders for all the exams of the assignment. The first one was about different ideas for how to approach the process, but since the idea proposed there was not the one we used in the end, the files are not in the repo. The [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/2nd_exam_files/Sxediasmos_Omada27_Bproodos.pdf][second exam]] includes a lot of information about the process we ended up doing such as reactor desing, which separators should be used and kinetics. It is the fundamentals of the process basically. In the [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Process_Design_Team27_3rd_exam.pdf][third exam]], the focus was mainly on getting the core parts of the process simulated in AspenPLUS. In the [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/4th_exam_files/olive_to_glycerol_cyclopentanone_4th_exam_omada_27.pdf][fourth exam]], we tried to complete the process flow sheet by including everything that we envisioned, to lead up to the first semester's [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Final_exam_files/olive_kernel_glycerol_cyclopentanone_omada_27_final.pdf][final exam]] where we structured the whole process using a block diagram concept explained [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Final_exam_files/process_blocks.pdf][here]] and in the various files of that folder. The requirements for this was to have a complete working simulation of the base process and to be able to present it in a good way. After this, are the folders for the exams of the second semester. The [[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/5th_exam_files/energy_production_and_integration_5th_exam.pdf][first]] is about energy production in the process as well as energy integration, with a goal of using the minimum energy possible and producing all of it inside the process from the combustion of lignin.
+
+A big part of how these were created is in the other files of the repository, from which most of the info was drawn. But these exam files try to take everything researched up to that point and put it together to be presented.
