Improving the process integration files

--- a/Aspen/lignin_cellulose_separation.org
+++ b/Aspen/lignin_cellulose_separation.org
@@ -1,6 +1,6 @@
 #+TITLE: Διαχωρισμός Κυτταρίνης-Λιγνίνης και Παραγωγή Γλυκόζης
 
-Το αρχείο αυτό αποτελεί επεξήγηση των διεργασιών που χρησιμοποιήθηκαν για τον διαχωρισμό της λιγνίνης από την κυτταρίνη. Η λιγνίνη και η κυτταρίνη βγαίνουν σε ένα ρεύμα μετά την διεργασία του steam explosion αλλά είναι σημαντικό να διαχωριστούν επειδή οι φαινολικές ενώσεις της λιγνίνης αναστέλουν την λειτουργία των ενζύμων υδρόλυσης της κυτταρίνης. Ο πρώτος διαχωρισμός που πρέπει να γίνει είναι η εκχύλιση με καυστικό νάτριο. 25 L/min υδατικού διαλύματος NaOH 2% w/w (με βάση τους [cite:@fernandez-bolanosSteamexplosionOliveStones2001]) αναμίχθηκαν με τα στερεά και τοποθετήθηκαν σε ένα Separator. Η προσομοίωση δεν έγινε με εκχυλιστήρα, επειδή το Aspen δεν έχει εκχύλιση στερεού-υγρού, αλλά με το generic εκχυλιστήρα. Σε αυτόν ορίστηκε ότι στο ρεύμα κυτταρίνης ανακτάται όλη η κυτταρίνη και 15000 τόνοι λιγνίνης το χρόνο και έτσι έγινε ο πρώτος διαχωρισμός. Ένα λάθος που υπάρχει στην προσομοίωση ως έχει είναι ότι κατά την ανάμιξη των δύο ρευμάτων για να μπούν στον εκχυλιστήρα, το υδατικό διάλυμα καυστικού νατρίου εξατμίζεται. Για να γίνει θεωρητικά η εκχύλιση, πρέπει το ρεύμα αυτό να είναι σε θερμοκρασία όπου το διάλυμα είναι υγρό. Βέβαια, για τώρα θα το αφήσουμε έτσι και η διεργασία θα διορθωθεί αργότερα.
+Το αρχείο αυτό αποτελεί επεξήγηση των διεργασιών που χρησιμοποιήθηκαν για τον διαχωρισμό της λιγνίνης από την κυτταρίνη. Η λιγνίνη και η κυτταρίνη βγαίνουν σε ένα ρεύμα μετά την διεργασία του steam explosion αλλά είναι σημαντικό να διαχωριστούν επειδή οι φαινολικές ενώσεις της λιγνίνης αναστέλουν την λειτουργία των ενζύμων υδρόλυσης της κυτταρίνης. Ο πρώτος διαχωρισμός που πρέπει να γίνει είναι η εκχύλιση με καυστικό νάτριο. 25 L/min υδατικού διαλύματος NaOH 2% w/w (με βάση τους [cite:@fernandez-bolanosSteamexplosionOliveStones2001]) αναμίχθηκαν με τα στερεά και τοποθετήθηκαν σε ένα Separator. Η προσομοίωση δεν έγινε με εκχυλιστήρα, επειδή το Aspen δεν έχει εκχύλιση στερεού-υγρού, αλλά με το generic εκχυλιστήρα. Σε αυτόν ορίστηκε ότι στο ρεύμα κυτταρίνης ανακτάται όλη η κυτταρίνη και 15000 τόνοι λιγνίνης το χρόνο και έτσι έγινε ο πρώτος διαχωρισμός. Βέβαια, οι [cite:@mustikaningrumEffectNaOHConcentration2021] σε μία αρκετά πιο πρόσφατη μελέτη προτείνουν η εκχύλιση να γίνει με διάλυμα 4% w/w και στους 80 \( ^oC \). Καθώς το μίγμα ψύχεται για να φτάσει στους 50 ή στους 80, είναι πιο εύκολο να γίνει στην υψηλότερη αυτή θερμοκρασία η εκχύλιση. Η μελέτη αυτή όμως χρησιμοποιεί άλλη πρώτη ύλη άρα δεν μπορούμε να ξέρουμε τα αποτελέσματα της για το δικό μας μίγμα. Παρόλα αυτά, λόγω του πλεονεκτήματος χρήσης των συνθηκών αυτών, θα εφαρμοστούν στην προσομοίωση μας και θα υποτεθεί αυθαίρετα μία αύξηση στην απόδοση του διαχωρισμού της τάξης του \( 5 \% \).
 
 Έπειτα, για να καθαρίσουμε περαιτέρω την κυτταρίνη μπορούμε να κάνουμε ένα bleaching με NaClO_2 (sodium chlorite). Με βάση τους [cite:@royInfraredSpectraJute1991; @fernandez-bolanosCharacterizationLigninObtained1999] η διεργασία γίνεται με αραιό υδατικό διάλυμα NaClO_2 στους 70 \( ^oC \) και το διάλυμα πρέπει να οξυνθεί με οξικό οξύ. Λόγω της μεγάλης τροφοδοσίας, θα χρησιμοποιηθεί ένα 1 m^3 νερό καθώς τυπικές διαδικασίες χρησιμοποιούν λιγότερο από ένα λίτρο. Σε αυτό θα προστεθούν 20.5 kg NaClO_2 και 6.625 mL οξικό οξύ (θα απαιτήσει NRTL-HOC μοντέλο) άρα 6.96 g. Για την θέρμανση μπορεί να χρησιμοποιηθεί ένα από τα ρεύματα του steam explosion (έστω οι ατμοί που δεν χρειάζονται για κάτι άλλο), οι οποίοι λόγω της μεγάλης παροχής τους έχουν και μικρή μεταβολή λόγω αυτού. Το bleaching μοντελοποιήθηκε και αυτό με χρήση του απλού separator διότι δεν μπορεί να προσομοιωθεί καλύτερα με κάτι άλλο. Με βάση την βιβλιογραφία, η διεργασία αυτή διώχνει όλη τη λιγνίνη που υπάρχει. Έπειτα, η κυτταρίνη πρέπει να αναμειχθεί με την απαιτούμενη ποσότητα νερού για την ενζυμική σακχαροποίηση και να ψυχθεί μέχρι τους 50 \( ^oC \) η οποία είναι η βέλτιστη θερμοκρασία λειτουργίας για τον αντιδραστήρα αυτόν. Η ψύξη γίνεται με νερό, χρησιμοποιόντας αρχικά το νερό που θέρμανε την τροφοδοσία του steam explosion (παίρνωντας το πρώτο από έναν υδροστρόβιλο για να ρίξουμε την πίεση) και προσθέτοντας περαιτέρω νερό που χρειάζεται. Καθώς το ρεύμα που θέλουμε να ψύξουμε έχει σε μεγάλο βαθμό νερό σε 1 bar, δεν μπορεί να ψυχθεί με άλλο νερό σε 1 bar επειδή τα δύο ρεύματα θα "χτυπήσουν" στο διάγραμμα T-Q. Για αυτό, κατά την εκτόνωση του νερού το ρίχνουμε στα 0.1 bar και όχι σε ατμοσφαιρική πίεση. Στα 0.1 bar, το νερό έχει θερμοκρασία κορεσμού 50 \( ^oC \) άρα είναι σίγουρο ότι δεν θα υπάρχει πρόβλημα στην εναλλαγή.
 
