--- a/energy_integration.org
+++ b/energy_integration.org
@@ -1,67 +1,95 @@
 #+TITLE: Ενεργειακή Ολοκλήρωση Διεργασίας
 
 * Επεξήγηση των Υπολογισμών
-Στο αρχείο αυτό θα γίνει η ενεργειακή ολοκλήρωση της διεργασίας. Ως πρώτο βήμα πρέπει να καταγραφούν όλα τα θερμά και ψυχρά ρεύματα της διεργασίας. Από το Aspen ορίστηκαν όλα τα ρεύματα τα οποία έχουν μεταβολή θερμοκρασίας και βρέθηκε αν είναι ψυχρά ή θερμά. Μετά υπολογίστηκε η ειδική θερμοχωρητικότητα τους, η καθαρή θερμοχωρητικότητα και η ενθαλπία τους.
+Στο αρχείο αυτό θα γίνει η ενεργειακή ολοκλήρωση της διεργασίας. Ως πρώτο βήμα πρέπει να καταγραφούν όλα τα θερμά και ψυχρά ρεύματα της διεργασίας. Η διαδικασία εύρεσης των ρευμάτων έγινε σε προηγούμενο αρχείο και έβγαλε τα εξής ρεύματα.
 
-#+CAPTION: Χαρακτηρισμός των Ρευμάτων
-| Ρεύμα     | Χαρακτηρισμός | Τ_αρχ | Τ_τελ | Cp J/mol K | CP MJ/K h | ΔΗ MJ/h |
-|-----------+---------------+-------+-------+------------+-----------+---------|
-| FeedSteam | Ψυχρό         |    20 |   232 |       75.6 |    47.872 | 3.58e+4 |
-| CellLig   | Θερμό         |   232 |    50 |     230.41 |     13.36 | 2430.95 |
-| Bleach    | Ψυχρό         |    20 |    70 |       75.6 |    4.2049 |  210.25 |
-| SachCell  | Ψυχρό         |    50 |  51.4 |      80.78 |      0.06 |  0.0842 |
-| Gluc      | Θερμό         |    50 |    30 |       79.3 |     53.08 |  1061.6 |
-| RProd     | Ψυχρό         |    30 |   150 |       75.4 |     58.38 | 3.53e+4 |
-| Xylose    | Ψυχρό         |   232 |   243 |        180 |      4.75 |   52.25 |
-| Furf      | Θερμό         |   242 |   160 |       96.1 |     10.14 |  831.48 |
+#+CAPTION: Θερμοχωρητικότητες ρευμάτων
+| Ρεύμα       | Παροχή (kmol/h) | Cp (J/mol K) | CP (MJ/h K) |
+|-------------+-----------------+--------------+-------------|
+| FeedSteam   |          633.22 |        75.38 |   47.732124 |
+| StExpVapors |          905.27 |        72.34 |   65.487232 |
+| CellLig     |           84.76 |        90.31 |   7.6546756 |
+| NaOH        |           80.37 |        75.38 |   6.0582906 |
+| Bleach      |           55.62 |        75.38 |   4.1926356 |
+| Cellulose   |           54.32 |        89.93 |   4.8849976 |
+| PureCell    |           42.55 |        89.63 |   3.8137565 |
+| SachWater   |             715 |        75.38 |     53.8967 |
+| Glucose     |          669.45 |        79.87 |   53.468972 |
+| RProd       |          774.29 |        74.58 |   57.746548 |
+| FlashVapors |          745.99 |        71.96 |   53.681440 |
+| GlycWater   |            9.82 |        75.38 |   0.7402316 |
+| PureGlyc    |            15.9 |        225.4 |     3.58386 |
+| XylFeed     |           26.38 |        178.1 |    4.698278 |
+| FurFeed     |          105.52 |        96.41 |   10.173183 |
+| Cyclo       |           24.61 |       112.71 |   2.7737931 |
+| CyclWater   |           106.9 |        76.12 |    8.137228 |
+#+TBLFM: $4=($2*$3)/1000
 
-Μεταβάλλουμε τις θερμοκρασίες κάτα ΔΤ_min/2 για να φτιάξουμε το μεγάλο σύνθετο γράφημα.
+Επίσης, μπορεί να κατασκευαστεί και ο πίνακας των ανηγμένων θερμοκρασιών του συστήματος
 #+CAPTION: Πίνακας ανηγμένων θερμοκρασιών
-| Ρεύμα     | Χαρακτηρισμός | Τ_αρχ | Τ_τελ |
-|-----------+---------------+-------+-------|
-| FeedSteam | Ψυχρό         |    25 |   237 |
-| CellLig   | Θερμό         |   227 |    45 |
-| Bleach    | Ψυχρό         |    25 |    75 |
-| SachCell  | Ψυχρό         |    55 |  56.4 |
-| Gluc      | Θερμό         |    45 |    25 |
-| RProd     | Ψυχρό         |    35 |   155 |
-| Xylose    | Ψυχρό         |   237 |   248 |
-| Furf      | Θερμό         |   237 |   155 |
+| Ρεύμα        | Είδος | Τ_in (C) | T_out (C) |
+|--------------+-------+----------+-----------|
+| FeedSteam    | Ψυχρό |       25 |       237 |
+| StExpVapors  | Θερμό |      227 |        25 |
+| CellLig      | Θερμό |      227 |     75.65 |
+| NaOH         | Ψυχρό |       25 |     85.65 |
+| Bleach       | Ψυχρό |       25 |      74.9 |
+| Cellulose    | Θερμό |    75.65 |      64.9 |
+| PureCell     | Θερμό |    56.97 |     44.75 |
+| SachWater    | Ψυχρό |       25 |     54.75 |
+| Glucose      | Θερμό |       45 |        25 |
+| RProd        | Ψυχρό |       35 |       145 |
+| FlashVaps    | Θερμό |      135 |        25 |
+| GlycWater    | Θερμό |    139.4 |        25 |
+| PureGlycerol | Θερμό |    283.9 |        25 |
+| XylFeed      | Ψυχρό |      237 |       248 |
+| FurFeed      | Θερμό |      238 |       155 |
+| Cyclo        | Θερμό |    262.8 |        25 |
+| CyclWater    | Θερμό |    196.5 |        25 |
 
 Βλέπουμε κάθε θερμοκρασιακό interval που ορίζουν τα ρεύματα αυτά, υπολογίζουμε το συνολικό θερμό και ψυχρό Cp στο καθένα, το αφαιρούμε και υπολογίζουμε την ενθαλπία κάθε ρεύματος.
 
 #+CAPTION: Χαρακτηρισμός των "ψευδο"-ρευμάτων του ενεργειακού καταρράκτη
-|     Τ_i |   ΔΤ |    CPc |   CPh |      CP |        ΔΗ |
-|---------+------+--------+-------+---------+-----------|
-| 248-237 |    9 |   4.75 |     0 |    4.75 |     42.75 |
-| 237-227 |   10 |  47.87 | 10.14 |   37.73 |     377.3 |
-| 227-155 |   72 |  47.87 |  23.5 |   24.37 |   1754.64 |
-|  155-75 |   80 | 106.25 | 13.36 |   92.89 |    7431.2 |
-| 75-56.4 | 18.6 | 110.45 | 13.36 |   97.09 |  1805.874 |
-| 56.4-55 |  1.4 | 482.67 | 13.36 |  469.31 |   657.034 |
-|   55-45 |   10 | 110.45 | 13.36 |   97.09 |     970.9 |
-|   45-35 |   10 | 110.45 | 53.08 |   57.37 |     573.7 |
-|   35-25 |   10 |  52.08 | 53.08 |     -1. |      -10. |
-#+TBLFM: $5=$3 - $4::$6=$5*$2
+|   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |         ΔΗ |
+|-------+-------+-------+---------+---------+---------+------------|
+| 283.9 | 262.8 |  21.1 |       0 |   3.584 |  -3.584 |   -75.6224 |
+| 262.8 |   248 |  14.8 |       0 |   6.358 |  -6.358 |   -94.0984 |
+|   248 |   238 |    10 |   4.698 |   6.358 |   -1.66 |      -16.6 |
+|   238 |   237 |     1 |   4.698 |  16.531 | -11.833 |    -11.833 |
+|   237 |   227 |    10 |  47.732 |  16.531 |  31.201 |     312.01 |
+|   227 | 196.5 |  30.5 |  47.732 |  89.673 | -41.941 | -1279.2005 |
+| 196.5 |   155 |  41.5 |  47.732 |  97.810 | -50.078 |  -2078.237 |
+|   155 |   145 |    10 |  47.732 |  87.637 | -39.905 |    -399.05 |
+|   145 | 139.4 |   5.6 | 105.479 |  87.637 |  17.842 |    99.9152 |
+| 139.4 |   135 |   4.4 | 105.479 |  88.377 |  17.102 |    75.2488 |
+|   135 | 85.65 | 49.35 | 105.479 | 142.058 | -36.579 | -1805.1737 |
+| 85.65 | 75.65 |   10. | 111.537 | 142.058 | -30.521 |    -305.21 |
+| 75.65 |  74.9 |  0.75 | 111.537 | 139.288 | -27.751 |  -20.81325 |
+|  74.9 |  64.9 |   10. | 115.730 | 139.288 | -23.558 |    -235.58 |
+|  64.9 | 56.97 |  7.93 | 115.730 | 134.403 | -18.673 | -148.07689 |
+| 56.97 | 54.75 |  2.22 | 115.730 | 138.217 | -22.487 |  -49.92114 |
+| 54.75 |    45 |  9.75 | 169.627 | 138.217 |   31.41 |   306.2475 |
+|    45 |    35 |    10 | 169.627 | 187.872 | -18.245 |    -182.45 |
+|    35 |    25 |    10 | 111.880 | 187.872 | -75.992 |    -759.92 |
+#+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
 
 * Αποτελέσματα - Γραφήματα
 Με βάση αυτά μπορεί να φτιαχθεί ο ενεργειακός καταρράκτης της διεργασίας και από αυτόν το μεγάλο σύνθετο γράφημα. Ο ενεργειακός καταρράκτης φαίνεται παρακάτω.
 #+CAPTION: Ενεργειακός καταρράκτης της διεργασίας
-#+ATTR_ORG: :width 500px
+#+ATTR_ORG: :width 700px
 [[./Diagrams/energy_cascade.svg]]
 
 Έπειτα, χρησιμοποιείται ο παρακάτω κώδικας octave για να δημιουργήσει το μεγάλο σύνθετο γράφημα της διεργασίας ([[https://github.com/Vidianos-Giannitsis/Process-Design/blob/master/Diagrams/grand_composite_curve.png][Δείτε εδώ από github]]).
 
 #+BEGIN_SRC octave :results file
 
-  T = [25, 35, 45, 55, 56.4, 75, 155, 227, 237, 248]
-  T_tick = [25, 35, 45, 55, 95, 135, 155, 195, 227, 237, 248]
-  Dh = [10, 0, 573.7, 1544.6, 2201.6, 4007.5, 11438.7, 13193.3, 13570.6, 13613.4]
+  T = [25, 35, 45, 54.75, 56.97, 64.9, 74.9, 75.65, 85.65, 135, 139.4, 145, 155, 196.5, 227, 237, 238, 248, 262.8, 283.9]
+  Dh = [6.782e+3, 6.022e+3, 5.840e+3, 6.146e+3, 6.096e+3, 5.948e+3, 5.713e+3, 5.692e+3, 5.387e+3, 3.581e+3, 3.657e+3, 3.757e+3, 3.357e+3, 1.279e+3, 0, 3.120e+2, 3.002e+2, 2.836e+2, 1.895e+2, 1.139e+2]
   figure( 1, "visible", "off" );
   plot(Dh, T)
   xlabel("Ενθαλπία [MJ/h]")
   ylabel("Θερμοκρασία [C]")
-  set(gca, 'ytick', T_tick)
+  #set(gca, 'ytick', T_tick)
   print -dpng Diagrams/grand_composite_curve.png;
   ans = "Diagrams/grand_composite_curve.png";
 
@@ -72,10 +100,70 @@
 #+RESULTS:
 [[file:Diagrams/grand_composite_curve.png]]
 
+Με τα ρεύματα αυτά ως έχουν, προκύπτει ότι απαιτείται μία μεγάλη ποσότητα ψυχρής παροχής και μικρή ποσότητα θερμής. Αυτό είναι ανεπιθύμητο επειδή η μονάδα έχει διαθέσιμη θερμή παροχή δωρεάν ενώ το ίδιο δεν ισχύει για την ψυχρή παροχή. Βέβαια, πολύ από αυτήν την απαίτηση οφείλεται στην εκμετάλλευση του θερμικού περιεχομένου των προιόντων τα οποία δεν είναι ανάγκη να ψυχθούν και τα εκμεταλλευόμαστε μόνο αν βοηθάνε.
+
+Τα δύο σημαντικότερα θερμά ρεύματα που συνεισφέρουν σε αυτό το ανεπιθύμητο αποτέλεσμα είναι οι ατμοί της έκρηξης ατμού (οι οποίοι είναι σε πολύ υψηλή θερμοκρασία και είναι αρκετά μεγάλη ποσότητα) και οι ατμοί του flash στον καθαρισμό της γλυκερόλης που είναι επίσης μεγάλη ποσότητα νερού στην ατμώδη φάση. Έστω για παράδειγμα ότι κάνουμε τους υπολογισμούς χωρίς αυτά.
+
+#+CAPTION: Καταρράκτης χωρίς flash και steam explosion vapors
+|   Τ_1 |   T_2 |    ΔΤ |     CPc |    CPh |      CP |        ΔΗ |
+|-------+-------+-------+---------+--------+---------+-----------|
+| 283.9 | 262.8 |  21.1 |       0 |  3.584 |  -3.584 |  -75.6224 |
+| 262.8 |   248 |  14.8 |       0 |  6.358 |  -6.358 |  -94.0984 |
+|   248 |   238 |    10 |   4.698 |  6.358 |   -1.66 |     -16.6 |
+|   238 |   237 |     1 |   4.698 | 16.531 | -11.833 |   -11.833 |
+|   237 |   227 |    10 |  47.732 | 16.531 |  31.201 |    312.01 |
+|   227 | 196.5 |  30.5 |  47.732 | 24.186 |  23.546 |   718.153 |
+| 196.5 |   155 |  41.5 |  47.732 | 32.323 |  15.409 |  639.4735 |
+|   155 |   145 |    10 |  47.732 | 22.150 |  25.582 |    255.82 |
+|   145 | 139.4 |   5.6 | 105.479 | 22.150 |  83.329 |  466.6424 |
+| 139.4 |   135 |   4.4 | 105.479 | 22.890 |  82.589 |  363.3916 |
+|   135 | 85.65 | 49.35 | 105.479 | 22.890 |  82.589 | 4075.7672 |
+| 85.65 | 75.65 |   10. | 111.537 | 22.890 |  88.647 |    886.47 |
+| 75.65 |  74.9 |  0.75 | 111.537 | 20.120 |  91.417 |  68.56275 |
+|  74.9 |  64.9 |   10. | 115.730 | 20.120 |   95.61 |     956.1 |
+|  64.9 | 56.97 |  7.93 | 115.730 | 15.235 | 100.495 | 796.92535 |
+| 56.97 | 54.75 |  2.22 | 115.730 | 19.049 |  96.681 | 214.63182 |
+| 54.75 |    45 |  9.75 | 169.627 | 19.049 | 150.578 | 1468.1355 |
+|    45 |    35 |    10 | 169.627 | 68.704 | 100.923 |   1009.23 |
+|    35 |    25 |    10 | 111.880 | 68.704 |  43.176 |    431.76 |
+#+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
+
+Από εδώ προκύπτει ο εξής πίνακας και άρα το εξής ΜΣΓ
+#+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
+#+PLOT: title:"Energy Cascade" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
+| Cumulative dH |     T |
+|---------------+-------|
+|     12464.919 | 283.9 |
+|     12540.541 | 262.8 |
+|     12634.640 |   248 |
+|     12651.240 |   238 |
+|     12663.073 |   237 |
+|     12351.063 |   227 |
+|     11632.910 | 196.5 |
+|     10993.436 |   155 |
+|     10737.616 |   145 |
+|     10270.974 | 139.4 |
+|      9907.582 |   135 |
+|      5831.815 | 85.65 |
+|      4945.345 | 75.65 |
+|      4876.782 | 74.90 |
+|      3920.682 |  64.9 |
+|      3123.757 | 56.97 |
+|      2909.125 | 54.75 |
+|       1440.99 |    45 |
+|       431.762 |    35 |
+|             0 |    25 |
+
+#+CAPTION: Μεγάλο Σύνθετο Γράφημα
+#+ATTR_ORG: :width 700px
+[[file:Diagrams/grand_composite_curve_2.png]]
+
+Στο γράφημα αυτό υπάρχει απαίτηση 12464.92 MJ/h θερμή παροχή και 152.354 MJ/h ψυχρή.
+
 * Συμπεράσματα
 Συμπέρασμα ότι με την ενεργειακή ολοκλήρωση, οι ενεργειακές απαιτήσεις της διεργασίας γίνονται
 
-Απαίτηση σε θερμή παροχή: 13613.4 MJ/h ή 3.78 MW και απαίτηση σε ψυχρή παροχή: 10 MJ/h ή 2.78 kW.
+Απαίτηση σε θερμή παροχή: 8126.25 MJ/h ή 2.26 MW και απαίτηση σε ψυχρή παροχή: 0.
 
 Επίσης, αξίζει να σημειωθεί πως ο κόμβος ανάσχεσης είναι το δεύτερο σημείο του γραφήματος με το πρώτο να είναι πολύ μικρό. Άρα, οι περιοχές μέσα και κάτω από τον κόμβο ανάσχεσης είναι πολύ μικρές. Αυτό μπορεί να δημιουργήσει προβλήματα εάν θέλουμε να ολοκληρώσουμε μία αντλία θερμότητας (μέσα από τον κόμβο ανάσχεσης) ή έναν ενδόθερμο αντιδραστήρα (κάτω από τον κόμβο ανάσχεσης). Άρα, πρακτικά δεν θα άξιζε να τοποθετηθεί σε κανένα σημείο της διεργασίας μία αντλία θερμότητας. Ο αντιδραστήρας της κυκλοπεντανόνης είναι ο μόνος ενδόθερμος αντιδραστήρας, άρα αυτός δεν θα μπορεί να ολοκληρωθεί σε καμία περίπτωση. Αλλά και να υπήρχε σημαντικό κομμάτι κάτω από τον κόμβο ανάσχεσης, η θερμοκρασία λειτουργίας του αντιδραστήρα (160 \( ^oC \)) είναι πολύ μεγαλύτερη από αυτή του κόμβου ανάσχεσης.
 
