--- a/energy_integration.org
+++ b/energy_integration.org
@@ -1,6 +1,6 @@
 #+TITLE: Ενεργειακή Ολοκλήρωση Διεργασίας
 
-* Επεξήγηση των Υπολογισμών
+* Αρχικοί Υπολογισμοί Ρευμάτων
 Στο αρχείο αυτό θα γίνει η ενεργειακή ολοκλήρωση της διεργασίας. Ως πρώτο βήμα πρέπει να καταγραφούν όλα τα θερμά και ψυχρά ρεύματα της διεργασίας. Η διαδικασία εύρεσης των ρευμάτων έγινε σε προηγούμενο αρχείο και έβγαλε τα εξής ρεύματα.
 
 #+CAPTION: Θερμοχωρητικότητες ρευμάτων
@@ -102,79 +102,135 @@
 
 Με τα ρεύματα αυτά ως έχουν, προκύπτει ότι απαιτείται μία μεγάλη ποσότητα ψυχρής παροχής και μικρή ποσότητα θερμής. Αυτό είναι ανεπιθύμητο επειδή η μονάδα έχει διαθέσιμη θερμή παροχή δωρεάν ενώ το ίδιο δεν ισχύει για την ψυχρή παροχή. Βέβαια, πολύ από αυτήν την απαίτηση οφείλεται στην εκμετάλλευση του θερμικού περιεχομένου των προιόντων τα οποία δεν είναι ανάγκη να ψυχθούν και τα εκμεταλλευόμαστε μόνο αν βοηθάνε.
 
-Τα δύο σημαντικότερα θερμά ρεύματα που συνεισφέρουν σε αυτό το ανεπιθύμητο αποτέλεσμα είναι οι ατμοί της έκρηξης ατμού (οι οποίοι είναι σε πολύ υψηλή θερμοκρασία και είναι αρκετά μεγάλη ποσότητα) και οι ατμοί του flash στον καθαρισμό της γλυκερόλης που είναι επίσης μεγάλη ποσότητα νερού στην ατμώδη φάση. Έστω για παράδειγμα ότι κάνουμε τους υπολογισμούς χωρίς αυτά.
+* Εναλλακτικά σενάρια ολοκλήρωσης
 
-#+CAPTION: Καταρράκτης χωρίς flash και steam explosion vapors
-|   Τ_1 |   T_2 |    ΔΤ |     CPc |    CPh |      CP |        ΔΗ |
-|-------+-------+-------+---------+--------+---------+-----------|
-| 283.9 | 262.8 |  21.1 |       0 |  3.584 |  -3.584 |  -75.6224 |
-| 262.8 |   248 |  14.8 |       0 |  6.358 |  -6.358 |  -94.0984 |
-|   248 |   238 |    10 |   4.698 |  6.358 |   -1.66 |     -16.6 |
-|   238 |   237 |     1 |   4.698 | 16.531 | -11.833 |   -11.833 |
-|   237 |   227 |    10 |  47.732 | 16.531 |  31.201 |    312.01 |
-|   227 | 196.5 |  30.5 |  47.732 | 24.186 |  23.546 |   718.153 |
-| 196.5 |   155 |  41.5 |  47.732 | 32.323 |  15.409 |  639.4735 |
-|   155 |   145 |    10 |  47.732 | 22.150 |  25.582 |    255.82 |
-|   145 | 139.4 |   5.6 | 105.479 | 22.150 |  83.329 |  466.6424 |
-| 139.4 |   135 |   4.4 | 105.479 | 22.890 |  82.589 |  363.3916 |
-|   135 | 85.65 | 49.35 | 105.479 | 22.890 |  82.589 | 4075.7672 |
-| 85.65 | 75.65 |   10. | 111.537 | 22.890 |  88.647 |    886.47 |
-| 75.65 |  74.9 |  0.75 | 111.537 | 20.120 |  91.417 |  68.56275 |
-|  74.9 |  64.9 |   10. | 115.730 | 20.120 |   95.61 |     956.1 |
-|  64.9 | 56.97 |  7.93 | 115.730 | 15.235 | 100.495 | 796.92535 |
-| 56.97 | 54.75 |  2.22 | 115.730 | 19.049 |  96.681 | 214.63182 |
-| 54.75 |    45 |  9.75 | 169.627 | 19.049 | 150.578 | 1468.1355 |
-|    45 |    35 |    10 | 169.627 | 68.704 | 100.923 |   1009.23 |
-|    35 |    25 |    10 | 111.880 | 68.704 |  43.176 |    431.76 |
+Τα δύο σημαντικότερα θερμά ρεύματα που συνεισφέρουν σε αυτό το ανεπιθύμητο αποτέλεσμα είναι οι ατμοί της έκρηξης ατμού (οι οποίοι είναι σε πολύ υψηλή θερμοκρασία και είναι αρκετά μεγάλη ποσότητα) και οι ατμοί του flash στον καθαρισμό της γλυκερόλης που είναι επίσης μεγάλη ποσότητα νερού στην ατμώδη φάση. Αν δεν χρησιμοποιηθεί τίποτα από τα δύο, το αποτέλεσμα θα είναι πως αντί για πολύ ψυχρή παροχή, χρειαζόμαστε πολύ θερμή παροχή. Έστω ότι χρησιμοποιούμε μόνο τους ατμούς του flash και όχι αυτούς της έκρηξης ατμού (οι οποίοι έχουν και μεγαλύτερο θερμοκρασιακό εύρος και μεγαλύτερη θερμοχωρητικότητα).
+
+#+CAPTION: Καταρράκτης χωρίς steam explosion vapors
+|   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |        ΔΗ |
+|-------+-------+-------+---------+---------+---------+-----------|
+| 283.9 | 262.8 |  21.1 |       0 |   3.584 |  -3.584 |  -75.6224 |
+| 262.8 |   248 |  14.8 |       0 |   6.358 |  -6.358 |  -94.0984 |
+|   248 |   238 |    10 |   4.698 |   6.358 |   -1.66 |     -16.6 |
+|   238 |   237 |     1 |   4.698 |  16.531 | -11.833 |   -11.833 |
+|   237 |   227 |    10 |  47.732 |  16.531 |  31.201 |    312.01 |
+|   227 | 196.5 |  30.5 |  47.732 |  24.186 |  23.546 |   718.153 |
+| 196.5 |   155 |  41.5 |  47.732 |  32.323 |  15.409 |  639.4735 |
+|   155 |   145 |    10 |  47.732 |  22.150 |  25.582 |    255.82 |
+|   145 | 139.4 |   5.6 | 105.479 |  22.150 |  83.329 |  466.6424 |
+| 139.4 |   135 |   4.4 | 105.479 |  22.890 |  82.589 |  363.3916 |
+|   135 | 85.65 | 49.35 | 105.479 |  76.571 |  28.908 | 1426.6098 |
+| 85.65 | 75.65 |   10. | 111.537 |  76.571 |  34.966 |    349.66 |
+| 75.65 |  74.9 |  0.75 | 111.537 |  73.801 |  37.736 |    28.302 |
+|  74.9 |  64.9 |   10. | 115.730 |  73.801 |  41.929 |    419.29 |
+|  64.9 | 56.97 |  7.93 | 115.730 |  68.916 |  46.814 | 371.23502 |
+| 56.97 | 54.75 |  2.22 | 115.730 |  72.730 |     43. |     95.46 |
+| 54.75 |    45 |  9.75 | 169.627 |  72.730 |  96.897 | 944.74575 |
+|    45 |    35 |    10 | 169.627 | 122.385 |  47.242 |    472.42 |
+|    35 |    25 |    10 | 111.880 | 122.385 | -10.505 |   -105.05 |
 #+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
 
-Από εδώ προκύπτει ο εξής πίνακας και άρα το εξής ΜΣΓ
 #+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
-#+PLOT: title:"Energy Cascade" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
-| Cumulative dH |     T |
-|---------------+-------|
-|     12464.919 | 283.9 |
-|     12540.541 | 262.8 |
-|     12634.640 |   248 |
-|     12651.240 |   238 |
-|     12663.073 |   237 |
-|     12351.063 |   227 |
-|     11632.910 | 196.5 |
-|     10993.436 |   155 |
-|     10737.616 |   145 |
-|     10270.974 | 139.4 |
-|      9907.582 |   135 |
-|      5831.815 | 85.65 |
-|      4945.345 | 75.65 |
-|      4876.782 | 74.90 |
-|      3920.682 |  64.9 |
-|      3123.757 | 56.97 |
-|      2909.125 | 54.75 |
-|       1440.99 |    45 |
-|       431.762 |    35 |
-|             0 |    25 |
+#+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
+| Cumulative  Dh |     T |
+|----------------+-------|
+|       6665.059 | 283.9 |
+|       6740.681 | 262.8 |
+|       6834.780 |   248 |
+|       6851.380 |   238 |
+|       6863.213 |   237 |
+|       6551.203 |   227 |
+|       5833.050 | 196.5 |
+|       5193.576 |   155 |
+|       4937.756 |   145 |
+|       4471.114 | 139.4 |
+|       4107.722 |   135 |
+|       2681.112 | 85.65 |
+|       2331.452 | 75.65 |
+|       2303.150 | 74.90 |
+|       1883.860 |  64.9 |
+|       1512.625 | 56.97 |
+|       1417.165 | 54.75 |
+|         472.42 |    45 |
+|              0 |    35 |
+|         105.05 |    25 |
 
-#+CAPTION: Μεγάλο Σύνθετο Γράφημα
+#+CAPTION: Μεγάλο Σύνθετο Γράφημα χωρίς τους ατμούς της έκρηξης ατμού
 #+ATTR_ORG: :width 700px
 [[file:Diagrams/grand_composite_curve_2.png]]
 
-Στο γράφημα αυτό υπάρχει απαίτηση 12464.92 MJ/h θερμή παροχή και 152.354 MJ/h ψυχρή.
+Με βάση το αποτέλεσμα αυτό, θεωρείται ότι υπάρχει περιθώριο να εκμεταλλευτούμε το θερμό ρεύμα που παραλείψαμε (καθώς υπάρχει μία σχετικά μεγάλη απαίτηση σε θερμό), αλλά δεν υπάρχει λόγος να ψυχθεί αυτό μέχρι χαμηλή θερμοκρασία επειδή όσο περισσότερο ψύχεται, τόσο περισσότερη ψυχρή παροχή θα θέλουμε. Από τους παραπάνω υπολογισμούς, βλέπουμε ότι η συνολική θερμοχωρητικότητα των θερμών είναι χαμηλή μέχρι τους 135 \( ^oC \) και μετά, που αρχίζουν να ψύχονται οι ατμοί του flash από τον καθαρισμό της γλυκερόλης, οι οποίοι έχουν υψηλή θερμοχωρητικότητα, υπάρχει αρκετή θερμή παροχή. Άρα, είναι αρκετά πιθανό η ψύξη των ατμών του steam explosion μέχρι τους 135 \( ^oC \) στο ΜΣΓ (δηλαδή 140 \( ^oC \)) να είναι βοηθητική, μειώνοντας σημαντικά την απαίτηση σε θερμή παροχή χωρίς να αυξάνει πολύ την απαίτηση σε ψυχρή βοηθητική παροχή.
+
+#+CAPTION: Καταρράκτης με μερική ψύξη των ατμών του steam explosion
+|   Τ_1 |   T_2 |    ΔΤ |     CPc |     CPh |      CP |         ΔΗ |
+|-------+-------+-------+---------+---------+---------+------------|
+| 283.9 | 262.8 |  21.1 |       0 |   3.584 |  -3.584 |   -75.6224 |
+| 262.8 |   248 |  14.8 |       0 |   6.358 |  -6.358 |   -94.0984 |
+|   248 |   238 |    10 |   4.698 |   6.358 |   -1.66 |      -16.6 |
+|   238 |   237 |     1 |   4.698 |  16.531 | -11.833 |    -11.833 |
+|   237 |   227 |    10 |  47.732 |  16.531 |  31.201 |     312.01 |
+|   227 | 196.5 |  30.5 |  47.732 |  89.673 | -41.941 | -1279.2005 |
+| 196.5 |   155 |  41.5 |  47.732 |  97.810 | -50.078 |  -2078.237 |
+|   155 |   145 |    10 |  47.732 |  87.637 | -39.905 |    -399.05 |
+|   145 | 139.4 |   5.6 | 105.479 |  87.637 |  17.842 |    99.9152 |
+| 139.4 |   135 |   4.4 | 105.479 |  88.377 |  17.102 |    75.2488 |
+|   135 | 85.65 | 49.35 | 105.479 |  76.571 |  28.908 |  1426.6098 |
+| 85.65 | 75.65 |   10. | 111.537 |  76.571 |  34.966 |     349.66 |
+| 75.65 |  74.9 |  0.75 | 111.537 |  73.801 |  37.736 |     28.302 |
+|  74.9 |  64.9 |   10. | 115.730 |  73.801 |  41.929 |     419.29 |
+|  64.9 | 56.97 |  7.93 | 115.730 |  68.916 |  46.814 |  371.23502 |
+| 56.97 | 54.75 |  2.22 | 115.730 |  72.730 |     43. |      95.46 |
+| 54.75 |    45 |  9.75 | 169.627 |  72.730 |  96.897 |  944.74575 |
+|    45 |    35 |    10 | 169.627 | 122.385 |  47.242 |     472.42 |
+|    35 |    25 |    10 | 111.880 | 122.385 | -10.505 |    -105.05 |
+#+TBLFM: $3=-($2 - $1)::$6=$4 - $5::$7=$6*$3
+
+#+CAPTION: Δεδομένα για τον ενεργειακό καταρράκτη
+#+PLOT: title:"Grand Composite Curve" ind:1 deps:(2) type:2d set:"xlabel 'Ενθαλπία [MJ/h]'" set:"ylabel 'Θερμοκρασία ^oC'" 
+| Cumulative  Dh |     T |
+|----------------+-------|
+|       640.2552 | 283.9 |
+|       715.8776 | 262.8 |
+|       809.9760 |   248 |
+|       826.5760 |   238 |
+|       838.4090 |   237 |
+|       526.3990 |   227 |
+|      1805.5995 | 196.5 |
+|      3883.8365 |   155 |
+|      4282.8865 |   145 |
+|      4182.9713 | 139.4 |
+|      4107.7225 |   135 |
+|      2681.1127 | 85.65 |
+|      2331.4527 | 75.65 |
+|      2303.1507 | 74.90 |
+|      1883.8607 |  64.9 |
+|      1512.6257 | 56.97 |
+|      1417.1657 | 54.75 |
+|         472.42 |    45 |
+|              0 |    35 |
+|         105.05 |    25 |
+
+#+CAPTION: Μεγάλο Σύνθετο Γράφημα χωρίς τους ατμούς της έκρηξης ατμού
+#+ATTR_ORG: :width 700px
+[[file:Diagrams/grand_composite_curve_3.png]]
 
 * Συμπεράσματα
-Συμπέρασμα ότι με την ενεργειακή ολοκλήρωση, οι ενεργειακές απαιτήσεις της διεργασίας γίνονται
+Συμπέρασμα ότι με την ενεργειακή ολοκλήρωση αυτή, η οποία θεωρείται και η καλύτερη, οι ενεργειακές απαιτήσεις της διεργασίας γίνονται
 
-Απαίτηση σε θερμή παροχή: 8126.25 MJ/h ή 2.26 MW και απαίτηση σε ψυχρή παροχή: 0.
+Απαίτηση σε ψυχρή παροχή 105.05 MJ/h σε θερμοκρασία κάτω από 25 \( ^oC \) στο ΜΣΓ (δηλαδή κάτω από 20 \( ^oC \), άρα στους 15 \( ^oC \) πχ).
 
-Επίσης, αξίζει να σημειωθεί πως ο κόμβος ανάσχεσης είναι το δεύτερο σημείο του γραφήματος με το πρώτο να είναι πολύ μικρό. Άρα, οι περιοχές μέσα και κάτω από τον κόμβο ανάσχεσης είναι πολύ μικρές. Αυτό μπορεί να δημιουργήσει προβλήματα εάν θέλουμε να ολοκληρώσουμε μία αντλία θερμότητας (μέσα από τον κόμβο ανάσχεσης) ή έναν ενδόθερμο αντιδραστήρα (κάτω από τον κόμβο ανάσχεσης). Άρα, πρακτικά δεν θα άξιζε να τοποθετηθεί σε κανένα σημείο της διεργασίας μία αντλία θερμότητας. Ο αντιδραστήρας της κυκλοπεντανόνης είναι ο μόνος ενδόθερμος αντιδραστήρας, άρα αυτός δεν θα μπορεί να ολοκληρωθεί σε καμία περίπτωση. Αλλά και να υπήρχε σημαντικό κομμάτι κάτω από τον κόμβο ανάσχεσης, η θερμοκρασία λειτουργίας του αντιδραστήρα (160 \( ^oC \)) είναι πολύ μεγαλύτερη από αυτή του κόμβου ανάσχεσης.
+Απαίτηση σε θερμή παροχή: 640.26 MJ/h. Αν εκμεταλλευτούμε την μικρή τσέπη που δημιουργείται στο πάνω μέρος του ΜΣΓ, τότε η θερμή παροχή πρέπει να διατίθεται τουλάχιστον στους 230 \( ^oC \) σε αυτό (δηλαδή τουλάχιστον 235 \( ^oC \) αν χρησιμοποιούμε την πραγματική θερμοκρασία), αλλιώς πρέπει να διατίθεται στους 284 \( ^oC \) τουλάχιστον. Βέβαια, ένα σημαντικό ποσό της απαίτησης (472.42 MJ/h) είναι σε πολύ χαμηλή θερμοκρασία (θέρμανση από τους 35 \( ^oC \) στους 45 \( ^oC \)), άρα, υπάρχει πιθανότητα εκτόνωσης του ατμού μετά την χρήση του για τα πιο ζεστά ρεύματα.
+
+Επίσης, πέρα από αυτήν την ενεργειακή τσέπη η οποία έχει δημιουργηθεί και επιτρέπει ο ατμός που παράγεται να είναι σε χαμηλότερη ενεργειακή στάθμη, υπάρχει και άλλη μία, η οποία είναι πάρα πολύ σημαντικής έκτασης και επιτρέπει την πλήρη ενεργειακή αυτονομία όλων των ρευμάτων από 227 \( ^oC \) μέχρι λίγο πάνω από 45 \( ^oC \).
+
+Επίσης, αξίζει να σημειωθεί πως ο κόμβος ανάσχεσης είναι το δεύτερο σημείο του γραφήματος με το πρώτο να είναι πολύ μικρό. Άρα, οι περιοχές μέσα και κάτω από τον κόμβο ανάσχεσης είναι πολύ μικρές. Αυτό μπορεί να δημιουργήσει προβλήματα εάν θέλουμε να ολοκληρώσουμε μία αντλία θερμότητας (μέσα από τον κόμβο ανάσχεσης) ή έναν ενδόθερμο αντιδραστήρα (κάτω από τον κόμβο ανάσχεσης). Άρα, πρακτικά δεν θα άξιζε να τοποθετηθεί σε κανένα σημείο της διεργασίας μία αντλία θερμότητας. Από ενδόθερμους αντιδραστήρες, ο αντιδραστήρας της παραγωγής κυκλοπεντανόνης είναι ο μόνος ενδόθερμος αντιδραστήρας, άρα αυτός δεν θα μπορεί να ολοκληρωθεί σε καμία περίπτωση. Αλλά και να υπήρχε σημαντικό κομμάτι κάτω από τον κόμβο ανάσχεσης, η θερμοκρασία λειτουργίας του αντιδραστήρα (160 \( ^oC \)) είναι πολύ μεγαλύτερη από αυτή του κόμβου ανάσχεσης.
 
 ** Σχόλια για την ολοκλήρωση διάφορων κομματιών
 *** Αντιδραστήρας παραγωγής γλυκερόλης
 Ο αντιδραστήρας λειτουργεί στους 30 βαθμούς κελσίου και είναι εξώθερμος. Στο μεγάλο σύνθετο γράφημα θα έμπαινε στους 25 \( ^oC \) το οποίο είναι κάτω από τον κόμβο ανάσχεσης κατά 10. Λόγω της πολύ στενής θερμοκρασιακής περιοχής στην οποία μπορεί να διεξαχθεί η αντίδραση, θεωρούμε πως δεν αξίζει να μελετηθεί ένα σενάριο ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία (όπου θα έπρεπε η θερμοκρασία λειτουργίας να αυξηθεί κατά 10 τουλάχιστον βαθμούς).
-*** Αποστακτική στήλη γλυκερόλης
-Ο συμπηκνωτήρας της στήλης είναι στους 144.37 \( ^oC \) ενώ ο αναβραστήρας στους 288.93 \( ^oC \). Υπάρχει σίγουρα η δυνατότητα να καλυφθεί θερμικά ένα ικανοποιητικό κομμάτι της διεργασίας αυτής από υπάρχοντα ρεύματα, όμως, η θερμοκρασία του αναβραστήρα είναι σιγουρα μεγαλύτερη από κάθε άλλη θερμοκρασία στην διεργασία άρα εκείνο το κομμάτι θα χρειαστεί μία ξεχωριστή βοηθητική παροχή σε στάθμη υψηλότερη αυτής που χρειάζεται η υπόλοιπη διεργασία.
 *** Αντιδραστήρας παραγωγής φουρφουράλης
 Θερμοκρασία λειτουργίας οι 242 \( ^oC \), ή 237 \( ^oC \) στο μεγάλο σύνθετο γράφημα. Ο αντιδραστήρας είναι εξώθερμος, άρα μπορεί να γίνει σωστή ολοκλήρωση. Καθώς είναι αρκετά ψηλά στο γράφημα, υπάρχουν σίγουρα ρεύματα πιο ψυχρά από αυτό για να το ψύξουν.
 *** Αποστακτική στήλη κυκλοπεντανόνης
 Οι θερμικές απαιτήσεις της στήλης υπερβαίνουν κατά πολύ την διαθέσιμη θερμότητα της διεργασίας άρα στην παρούσα φάση δεν μπορεί να ολοκληρωθεί. Βέβαια ο διαχωρισμός αυτός έχει κατασταθεί πολύ δύσκολος λόγω της πολύ υψηλής πίεσης λειτουργίας. Αν ρίξουμε την πίεση αυτή και η απόσταξη γίνει σε ατμοσφαιρική πχ πίεση, είναι πιθανό να μπορεί να ολοκληρωθεί η στήλη καθώς οι θερμοκρασιακές περιοχές που κινείτε είναι κατάλληλες και θα είναι ακόμη καλύτερες αν μειωθεί η πίεση λειτουργίας.
 *** Αντιδραστήρας σακχαροποίησης
-Ο αντιδραστήρας λειτουργεί στους 50 \( ^oC \) και είναι εξώθερμος (45 \( ^oC \) στο ΜΣΓ). Εφόσον είναι πάνω από τον κόμβο ανάσχεσης, μπορεί θεωρητικά να ολοκληρωθεί με την διεργασία. Όμως, με το παρόν ΜΣΓ, έχουμε διαθέσιμα 573.7 MJ/h θερμότητα διαθέσιμη στην θερμοκρασία αυτή ενώ με βάση τα αποτελέσματα του Aspen, το heat duty της διεργασίας είναι -2477 MJ/hr. Για να έχουμε το επιθυμητό θερμικό περιεχόμενο, θα έπρεπε η θερμοκρασία να αυξηθεί μέχρι τους 100-105 \( ^oC \) περίπου. Στις συνθήκες αυτές δεν μπορεί να επιζήσει καμία κυτταρινάση. Θεωρητικά, μπορεί να γίνει όξινη υδρόλυση της κυτταρίνης με καταλύτη θειικό οξύ με συνθήκες λειτουργίας 120 \( ^oC \) περίπου, η οποία θα μπορούσε να ολοκληρωθεί, όμως είναι γνωστό πως η όξινη προκατεργασία της βιομάζας ευνοεί την διάσπαση κυτταρίνης σε παραπροιόντα όπως η υδρόξυ-μέθυλο-φουρφουράλη (HMF) και τα προιόντα διάσπασης αυτής πέρα από την γλυκόζη, οι οποίες είναι ενώσεις που είναι γνωστές για την τοξικότητα τους προς μικροοργανισμούς. Ως αποτέλεσμα, θα έπρεπε να γίνει κάποιος επιπλέον διαχωρισμός για να ανακτηθεί καθαρή γλυκόζη στην περίπτωση αυτή. Άρα θεωρείται ανούσια η προσπάθεια ολοκλήρωσης του αντιδραστήρα αυτού με την υπόλοιπη διεργασία.
+Ο αντιδραστήρας λειτουργεί στους 50 \( ^oC \) και είναι εξώθερμος (45 \( ^oC \) στο ΜΣΓ). Εφόσον είναι πάνω από τον κόμβο ανάσχεσης, μπορεί θεωρητικά να ολοκληρωθεί με την διεργασία. Όμως, με το παρόν ΜΣΓ, έχουμε διαθέσιμα 472.42 MJ/h θερμότητα διαθέσιμη στην θερμοκρασία αυτή ενώ με βάση τα αποτελέσματα του Aspen, το heat duty της διεργασίας είναι -2477 MJ/hr. Για να έχουμε το επιθυμητό θερμικό περιεχόμενο, θα έπρεπε η θερμοκρασία να αυξηθεί μέχρι τους 80 \( ^oC \) περίπου. Στις συνθήκες αυτές δεν μπορεί να επιζήσει καμία κυτταρινάση. Θεωρητικά, μπορεί να γίνει όξινη υδρόλυση της κυτταρίνης με καταλύτη θειικό οξύ με συνθήκες λειτουργίας 120 \( ^oC \) περίπου, η οποία θα μπορούσε να ολοκληρωθεί, όμως είναι γνωστό πως η όξινη προκατεργασία της βιομάζας ευνοεί την διάσπαση κυτταρίνης σε παραπροιόντα όπως η υδρόξυ-μέθυλο-φουρφουράλη (HMF) και τα προιόντα διάσπασης αυτής πέρα από την γλυκόζη, οι οποίες είναι ενώσεις που είναι γνωστές για την τοξικότητα τους προς μικροοργανισμούς. Ως αποτέλεσμα, θα έπρεπε να γίνει κάποιος επιπλέον διαχωρισμός για να ανακτηθεί καθαρή γλυκόζη στην περίπτωση αυτή. 
